# PaperAgent

./: .case001-e2e-trigger  .case011-patch-trigger.json  .case015-multibehavior-patch-trigger.json  .cases-015-017-patch-trigger.json  .claw-four-case-trigger.json  .claw-paid-full-20-trigger.json  .claw-real-provider-smoke-trigger.json  .claw-single-case-trigger.json  .cross-domain-method-trigger  .dockerignore  .env.example  .final-leakage-verification-trigger  .gitattributes  .gitignore  .leakage-cleanup-trigger  .patch-benchmark-adapter-trigger  .retrieval-precision-trigger.json  .review-remediation-trigger.json  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODELY.md  Dockerfile  HANDOFF.md  METHOD_REPAIR_DEBUG.txt  PLANNING_PYTEST_DEBUG.txt  README.md  SEMANTIC_REPAIR_DEBUG.txt  langgraph_architecture.excalidraw  langgraph_architecture.html  paperagent.db  paperagent.db.backup  pyproject.toml  pytest.ini  rules.md  run_tests.bat  server_log.txt  start_all.bat  start_frontend.bat  (+14 more)
.bootstrap/: READY  payload.part00  payload.part01  payload.part02  payload.part03  payload.part04  payload.part05  payload.part06  payload.part07  payload.part08  recover.py
.bootstrap-v02/: READY  chunk04  chunk05  chunk06  chunk07  chunk08  chunk09  chunk10  chunk11  chunk12  chunk13  chunk14  chunk15  payload.part00  payload.part01
.bootstrap-v03/: EXPORT
.bootstrap-v4/: READY  READY10  READY2  READY3  READY4  READY5  READY6  READY7  READY8  READY9  payload.part00  payload.part01  payload.part02  payload.part03  payload.part04  payload.part05  payload.part050  payload.part050.b64  payload.part051.b64  payload.part0510  payload.part0510.b64  payload.part0511  payload.part06  payload.part07
.claude/: .gitignore  settings.json  settings.local.json
.github/: evidence-bound-module-finalize-trigger.txt  evidence-bound-module-run-2.txt  evidence-bound-module-run-v2.txt  evidence-bound-module-run-v3.txt  evidence-bound-module-run-v4.txt  evidence-bound-module-run-v5.txt  evidence-bound-module-run.txt  evidence-bound-module-trigger.txt  evidence-bound-module-v2-run.txt  evidence-bound-module-v2-trigger.txt
.opencode/: .gitignore  README.md  opencode.json
Legcy/: README.md
Plan/: PaperAgent_Re03_重型检索与过滤器修复_SOP.md  PaperAgent_Re04-fix_完工报告.md  PaperAgent_Re04_完工报告.md  PaperAgent_Re04_审计细节_保留与剔除.md  PaperAgent_Re05_Balanced40_完工报告.md  PaperAgent_Re05_Balanced40_逐论文审计.md  PaperAgent_Re1.1_FIX-4迁移审计.md  PaperAgent_Re1.1_Loop3_真实小样例3.md  PaperAgent_Re1.1_Loop4_跨领域小样例5.md  PaperAgent_Re1.1_完工报告.md  PaperAgent_Re1.2_LangGraph全链路完善与候选关系网_SOP.md  PaperAgent_Re1.2_完工报告.md  PaperAgent_Re1.3_Loop0_静态审计.md  PaperAgent_Re1.3_Loop5_真实小样例3.md  PaperAgent_Re1.3_完工报告.md  PaperAgent_Re1.4_全链路MVP_SOP.md  PaperAgent_Re1.4_前端完善与E2E验证_SOP.md  PaperAgent_Re1.4_前端完善完工报告.md  PaperAgent_Re1.5_完工报告.md  PaperAgent_Re10_Balanced40_候选论文.csv  PaperAgent_Re10_Balanced40_逐论文审计.csv  PaperAgent_Re10_Balanced40_逐论文审计.md  PaperAgent_Re10_FIX-2_Balanced40_致命问题自查.md  PaperAgent_Re10_FIX-2_Balanced40_逐论文审计.csv  PaperAgent_Re10_FIX-2_典型样例审计.md  PaperAgent_Re10_FIX-2_完工报告.md  PaperAgent_Re10_FIX-2_小样例闭环检索修复_SOP.md  PaperAgent_Re10_FIX-2_抽样10审计.csv  PaperAgent_Re10_FIX_SearchTrace_索引.md  PaperAgent_Re10_FIX_完工报告.md  PaperAgent_Re10_ReflectionLoop_统计.json  PaperAgent_Re10_SearchTrace_索引.md  PaperAgent_Re10_完工报告.md  PaperAgent_Re11_Loop0_静态审计.md  PaperAgent_Re11_Loop1_Provider连通性.md  PaperAgent_Re11_Loop3_真实小样例3.md  PaperAgent_Re11_PITFALLS.md  PaperAgent_Re2.1_完工报告.md  PaperAgent_Re2.2_完工报告.md  PaperAgent_Re2_功能增强_SOP.md  (+100 more)
apps/: tmp_s66v_adapter_cooldowns.json
artifacts/: provider-router-load-report.json
candidate-workspace/: pyproject.toml
cloud-status/: artifact-driven-run-list.json  artifact-driven-run.json  post-fix-smoke-list.json  post-fix-smoke-run.json
config/: academic-tailoring-laguna.env.example  price-table-deepseek.json  price-table-mistral.json  provider-router-balanced.example.json  provider-router-load.example.json
contracts/: openapi-v1.json
data/: public-dev-v2-run-trigger.json  public-dev-v2.jsonl
docs/: BENCHMARK_PROTOCOL.md  Prompts_AgentStages.md  Prompts_Reflection_ReAct.md  ROADMAP_AFTER_V0.1.md  ROADMAP_V0_6_V0_8.md  STRUCTURED_OUTPUT_COMPATIBILITY.md  agent_architecture.md
examples/external_plugin/: README.md  input.json  pyproject.toml
examples/external_plugin/src/paperagent_interview_plugin/: __init__.py
paperagent-ui.design/: .design  colors_and_type.css  validation-report.json
private/: README.md
results/: public-dev-v2-latest.json
schema/: case.schema.json
scripts/: .review-remediation-00.b64  .review-remediation-01.b64  .review-remediation-02.b64  .review-remediation-03.b64  .review-remediation-04a.b64  .review-remediation-04b.b64  .review-remediation-04c.b64  .review-remediation-04d.b64  _create_stub_reviews.py  (+168 more)
(+3918 files in other folders)
