[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topicpilot-cn"
version = "0.2.0"
description = "TopicPilot-CN: 一题判断能不能做的开题选题助手 MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pypdf>=4.0",  # Session 46: paper library PDF 解析
    "langgraph>=1.2.7",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.9.7",
]

[project.optional-dependencies]
# Re8 structured PDF parsing. The base install keeps the existing pypdf
# fallback; deployments that need heading/table extraction opt into this extra.
pdf = [
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]


[tool.pytest.ini_options]
testpaths = ["apps/web/e2e", "apps/api/tests"]
pythonpath = ["."]
