[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperagent-interview-summary-plugin"
version = "0.1.0"
description = "A minimal independently packaged PaperAgent plugin example."
requires-python = ">=3.11"
dependencies = ["paperagent"]

[project.entry-points."paperagent.plugins"]
interview-summary = "paperagent_interview_plugin:InterviewSummaryPlugin"

[tool.setuptools.packages.find]
where = ["src"]
